# Daldong

./: .gitignore  README.md
backend/daldong/: .gitignore  build.gradle  dockerfile  settings.gradle
backend/daldong/app/: google-services.json
backend/daldong/wear/: build.gradle  local.properties  private_key.pepk
backend/daldong_recommend/: .gitignore  dockerfile  main.py  pyproject.toml  requirements.txt
backend/daldong_recommend/apis/: exerciserecommend.py  friendrecommend.py
backend/daldong_recommend/core/: config.py
backend/daldong_recommend/crud/: read.py
backend/daldong_recommend/db/: connection.py
backend/daldong_recommend/db/models/: models.py
backend/daldong_recommend/routes/: friend.py  reco.py
backend/data_preprocessing/: data_preprocessing.py  main.py  preprocessed_data.csv  preprocessed_data_fix_url.csv  recommend_data.csv  recommend_data_preprocessing.py  ~$first_data_preprocessing.csv  추천 데이터.txt
backend/data_preprocessing/MySQL_data/: asset.csv  daily_mission.csv  exercise_recommend_data.csv  level.csv  motion.csv
exec/: 포팅메뉴얼.md
frontend/daldong/: .gitignore  .metadata  DaldongKey.jks  README.md  pubspec.yaml
frontend/daldong/android/: build.gradle  settings.gradle
frontend/daldong/ios/: firebase_app_id_file.json
frontend/daldong/lib/: firebase_options.dart  main.dart
frontend/daldong/linux/: CMakeLists.txt  my_application.cc
frontend/daldong/macos/: firebase_app_id_file.json
frontend/daldong/test/: widget_test.dart
frontend/daldong/web/: index.html  (+1 more)
frontend/daldong_webview/: package-lock.json  package.json
(+436 files in other folders)
