[tool.poetry]
name = "daldong-recommend"
version = "0.1.0"
description = ""
authors = ["JGW <wrd4000@naver.com>"]
readme = "README.md"
packages = [{include = "daldong_recommend"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
